sign up customer

--- a/services/identity-srv/.env.development
+++ b/services/identity-srv/.env.development
@@ -14,6 +14,11 @@ DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-identit
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 
+# SERVICES
+
+CUSTOMER_API_SRV = http://localhost:5060/api/v1
+
+
 # OPTIONS
 
 PASSWORD_SALT = secret
