--- a/clients/order-ui/package.json
+++ b/clients/order-ui/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@modules/order-main": "1.0.0",
+    "@modules/order-orders": "1.0.0",
+    "@modules/order-order-modify": "1.0.0",
     "@modules/order-sign-in": "1.0.0",
     "@modules/order-sign-up": "1.0.0",
     "@ui.packages/admin-kit": "1.0.0",
