--- a/services/identity-srv/.env.production
+++ b/services/identity-srv/.env.production
@@ -14,6 +14,11 @@ DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/identity_srv
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 
+# SERVICES
+
+CUSTOMER_API_SRV = http://customer_srv/api/v1
+
+
 # OPTIONS
 
 PASSWORD_SALT = secret
