--- a/services/identity-srv/package.json
+++ b/services/identity-srv/package.json
@@ -18,6 +18,7 @@
     "@sys.packages/rabbit": "1.0.0",
     "@sys.packages/server": "1.0.0",
     "@sys.packages/utils": "1.0.0",
+    "@sys.packages/request": "1.0.0",
     "dotenv": "10.0.0",
     "koa": "2.13.1",
     "koa-bodyparser": "4.3.0",
@@ -25,7 +26,8 @@
     "koa-router": "10.0.0",
     "pg": "8.7.1",
     "pg-hstore": "2.3.4",
-    "sequelize": "6.6.5"
+    "sequelize": "6.6.5",
+    "node-sagas": "0.0.6"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
