--- a/Dockerfile.order-ui
+++ b/Dockerfile.order-ui
@@ -12,7 +12,7 @@ COPY ./clients/order-ui/src             ./clients/order-ui/src
 COPY ./clients/order-ui/public          ./clients/order-ui/public
 COPY ./clients/order-ui/package.json    ./clients/order-ui
 COPY ./clients/order-ui/.env.production ./clients/order-ui
-COPY ./modules                          ./modules
+COPY ./modules/order                    ./modules/order
 COPY ./ui.packages                      ./ui.packages
 COPY ./packages                         ./packages
 COPY ./package.json                     ./
