--- a/services/order-srv/db/config.json
+++ b/services/order-srv/db/config.json
@@ -11,7 +11,7 @@
   "production": {
     "port": 5432,
     "host": "db",
-    "database": "product_srv",
+    "database": "order_srv",
     "username": "admin",
     "password": "1Ctdfcnjgjkm",
     "dialect": "postgres"
