--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       - db
     links:
       - db
+      - rabbit
 
 
   identity_srv:
@@ -74,6 +75,7 @@ services:
       - customer_srv
     links:
       - db
+      - rabbit
       - customer_srv
 
 
