--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,10 +135,12 @@ services:
         max-file: "5"
         max-size: 10m
     depends_on:
+      - rabbit
       - order_srv
       - identity_srv
       - customer_srv
     links:
+      - rabbit
       - order_srv
       - identity_srv
       - customer_srv
