--- a/services/identity-srv/.env.production
+++ b/services/identity-srv/.env.production
@@ -16,7 +16,7 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 # SERVICES
 
-CUSTOMER_API_SRV = http://customer_srv/api/v1
+CUSTOMER_API_SRV = http://customer_srv:8080/api/v1
 
 
 # OPTIONS
