identity jwt secret

--- a/gateway/admin-gw/.env.production
+++ b/gateway/admin-gw/.env.production
@@ -11,7 +11,7 @@ TAKE = 12
 COOKIE_NAME = admin-osetpr
 COOKIE_SECURE = true
 
-JWT_SECRET = admin.osetpr.secret.key
+JWT_SECRET = osetpr.secret.key
 
 HTTP_ORIGINS = https://admin.osetpr.ru:8080
 
