--- a/gateway/order-gw/.env.production
+++ b/gateway/order-gw/.env.production
@@ -11,7 +11,7 @@ TAKE = 12
 COOKIE_NAME = order-osetpr
 COOKIE_SECURE = true
 
-JWT_SECRET = order.osetpr.secret.key
+JWT_SECRET = osetpr.secret.key
 
 HTTP_ORIGINS = https://order.osetpr.ru:8080
 
