--- a/services/identity-srv/.env.production
+++ b/services/identity-srv/.env.production
@@ -25,7 +25,7 @@ PASSWORD_SALT = secret
 
 JWT_EXP = 10
 JWT_EXP_END = 1
-JWT_SECRET = glass.admin.shop.secret.key
+JWT_SECRET = osetpr.secret.key
 
 
 # EXCHANGE
