--- a/gateway/admin-gw/.env.development
+++ b/gateway/admin-gw/.env.development
@@ -11,7 +11,7 @@ TAKE = 12
 COOKIE_NAME = dev-admin-osetpr
 COOKIE_SECURE = true
 
-JWT_SECRET = admin.osetpr.secret.key
+JWT_SECRET = osetpr.secret.key
 
 HTTP_ORIGINS = http://localhost:3010
 
