--- a/clients/client-ui/.env.development
+++ b/clients/client-ui/.env.development
@@ -4,14 +4,14 @@ NODE_ENV = development
 # LOCAL SERVER
 
 HOST = localhost
-PORT = 3020
+PORT = 3000
 HTTPS = false
 
 PUBLIC_URL = /
 
-REACT_APP_SOCKET_HOST = http://localhost:4010
-REACT_APP_SOCKET_PATH = /order.socket.io
-REACT_APP_API_HOST = http://localhost:4010
+REACT_APP_SOCKET_HOST = http://localhost:4000
+REACT_APP_SOCKET_PATH = /client.socket.io
+REACT_APP_API_HOST = http://localhost:4000
 
 REACT_APP_TAKE = 12
 
