--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,6 +146,29 @@ services:
       - customer_srv
 
 
+  client_gw:
+    container_name: client_gw
+    build:
+      context: ./
+      dockerfile: Dockerfile.client-gw
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: 10m
+    depends_on:
+      - rabbit
+      - order_srv
+      - identity_srv
+      - customer_srv
+    links:
+      - rabbit
+      - order_srv
+      - identity_srv
+      - customer_srv
+
+
   order_ui:
     container_name: order_ui
     build:
@@ -184,6 +207,27 @@ services:
       - admin_gw
     volumes:
       - ./clients/admin-ui/nginx/conf.d:/etc/nginx/conf.d:ro
+    environment:
+      - NODE_ENV=production
+
+
+  client_ui:
+    container_name: client_ui
+    build:
+      context: ./
+      dockerfile: Dockerfile.client-ui
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: 10m
+    depends_on:
+      - client_gw
+    links:
+      - client_gw
+    volumes:
+      - ./clients/client-ui/nginx/conf.d:/etc/nginx/conf.d:ro
     environment:
       - NODE_ENV=production
 
