--- a/lerna.json
+++ b/lerna.json
@@ -6,6 +6,7 @@
     "ui.packages/*",
     "packages/*",
     "modules/order/*",
+    "modules/client/*",
     "modules/admin/*",
     "clients/*",
     "gateway/*",
