--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -7,6 +7,10 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@modules/admin-main": "1.0.0",
+    "@modules/admin-orders": "1.0.0",
+    "@modules/admin-customers": "1.0.0",
+    "@modules/admin-sign-in": "1.0.0",
     "@ui.packages/admin-kit": "1.0.0",
     "@ui.packages/application": "1.0.0",
     "@ui.packages/dialog": "1.0.0",
