--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -10,7 +10,9 @@ RUN /etc/init.d/postgresql start &&\
     psql --command "CREATE USER admin WITH SUPERUSER PASSWORD '1Ctdfcnjgjkm';" &&\
     createdb -O admin order_srv &&\
     createdb -O admin identity_srv &&\
-    createdb -O admin customer_srv
+    createdb -O admin customer_srv &&\
+    createdb -O admin gallery_srv &&\
+    createdb -O admin product_srv
 
 RUN echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/10/main/pg_hba.conf
 
