--- a/services/products-srv/.env.development
+++ b/services/products-srv/.env.development
@@ -1,15 +1,17 @@
 
 # PORT
 
-PORT = 5000
+PORT = 5010
 
 
 # SERVICES
 
+GALLERY_API_SRV = http://localhost:5030/api/v1
+
 
 # DATABASE CONNECTION
 
-DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-order_srv
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-product_srv
 
 
 # RABBIT CONNECTION
