--- a/services/products-srv/.env.production
+++ b/services/products-srv/.env.production
@@ -1,20 +1,22 @@
 
 # PORT
 
-PORT = 5000
+PORT = 8080
 
 
 # SERVICES
 
+GALLERY_API_SRV = http://gallery_srv:8080/api/v1
+
 
 # DATABASE CONNECTION
 
-DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-order_srv
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/order_srv
 
 
 # RABBIT CONNECTION
 
-RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
+RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 
 #RABBIT QUEUE
