--- a/services/product-srv/.env.production
+++ b/services/product-srv/.env.production
@@ -11,7 +11,7 @@ GALLERY_API_SRV = http://gallery_srv:8080/api/v1
 
 # DATABASE CONNECTION
 
-DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/order_srv
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/product_srv
 
 
 # RABBIT CONNECTION
