--- a/gateway/admin-gw/.env.production
+++ b/gateway/admin-gw/.env.production
@@ -22,7 +22,7 @@ SOCKET_PATH = /admin.socket.io
 
 IDENTITY_API_SRV = http://identity_srv:8080/api/v1
 CUSTOMER_API_SRV = http://customer_srv:8080/api/v1
-PRODUCT_API_SRV = http://product_srv:8080/api/v1
+ORDER_API_SRV = http://order_srv:8080/api/v1
 
 
 # RABBIT CONNECTION
