--- a/gateway/admin-gw/.env.development
+++ b/gateway/admin-gw/.env.development
@@ -23,6 +23,8 @@ SOCKET_PATH = /admin.socket.io
 IDENTITY_API_SRV = http://localhost:5050/api/v1
 CUSTOMER_API_SRV = http://localhost:5060/api/v1
 ORDER_API_SRV = http://localhost:5000/api/v1
+PRODUCT_API_SRV = http://localhost:5010/api/v1
+GALLERY_API_SRV = http://localhost:5030/api/v1
 
 
 # RABBIT CONNECTION
