--- a/services/mail-srv/.env.production
+++ b/services/mail-srv/.env.production
@@ -14,6 +14,11 @@ EMAIL_USER = "orders@osetpr.ru"
 EMAIL_PASSWORD = "1Ctdfcnjgjkm"
 
 
+#SERVICES
+
+IDENTITY_API_SRV = http://localhost:5050/api/v1
+
+
 # RABBIT CONNECTION
 
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
