--- a/services/mail-srv/.env.production
+++ b/services/mail-srv/.env.production
@@ -16,7 +16,7 @@ EMAIL_PASSWORD = "1Ctdfcnjgjkm"
 
 #SERVICES
 
-IDENTITY_API_SRV = http://localhost:5050/api/v1
+IDENTITY_API_SRV = http://identity_srv:8080/api/v1
 
 
 # RABBIT CONNECTION
