--- a/services/mail-srv/.env.production
+++ b/services/mail-srv/.env.production
@@ -26,9 +26,9 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 # QUEUES
 
-QUEUE_ORDER_CREATE = QUEUE_ADMIN_GW.order.create
-QUEUE_ORDER_UPDATE = QUEUE_ADMIN_GW.order.update
-QUEUE_ORDER_DELETE = QUEUE_ADMIN_GW.order.delete
+QUEUE_ORDER_CREATE = QUEUE_MAIL_SRV.order.create
+QUEUE_ORDER_UPDATE = QUEUE_MAIL_SRV.order.update
+QUEUE_ORDER_DELETE = QUEUE_MAIL_SRV.order.delete
 
 
 #RABBIT EXCHANGE
