--- a/gateway/order-gw/package.json
+++ b/gateway/order-gw/package.json
@@ -15,6 +15,7 @@
     "@sys.packages/server": "1.0.0",
     "@sys.packages/socket.io": "1.0.0",
     "@sys.packages/utils": "1.0.0",
+    "@sys.packages/jwt": "1.0.0",
     "axios": "0.21.1",
     "busboy": "0.3.1",
     "dotenv": "10.0.0",
