update mail rabbit queues

--- a/services/identity-srv/.env.development
+++ b/services/identity-srv/.env.development
@@ -28,6 +28,13 @@ JWT_EXP_END = 1
 JWT_SECRET = osetpr.secret.key
 
 
+#RABBIT QUEUE
+
+QUEUE_MAIL_USER_CREATE = QUEUE_MAIL_USER_CREATE.user.create
+
+
 # EXCHANGE
 
-RABBIT_IDENTITY_SRV_EXCHANGE_PASSPORT_UPDATED = RABBIT_IDENTITY_SRV_EXCHANGE.passport.updated
+EXCHANGE_USER_CREATE = EXCHANGE_USER_CREATE.user.create
+EXCHANGE_USER_UPDATE = EXCHANGE_USER_UPDATE.user.update
+EXCHANGE_USER_DELETE = EXCHANGE_USER_DELETE.user.delete
