--- a/services/mail-srv/.env.development
+++ b/services/mail-srv/.env.development
@@ -24,15 +24,9 @@ IDENTITY_API_SRV = http://localhost:5050/api/v1
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 
-# QUEUES
+#RABBIT QUEUE
 
-QUEUE_ORDER_CREATE = QUEUE_ADMIN_GW.order.create
-QUEUE_ORDER_UPDATE = QUEUE_ADMIN_GW.order.update
-QUEUE_ORDER_DELETE = QUEUE_ADMIN_GW.order.delete
+QUEUE_MAIL_ORDER_CREATE = QUEUE_MAIL_ORDER_CREATE.order.create
+QUEUE_MAIL_ORDER_UPDATE = QUEUE_MAIL_ORDER_UPDATE.order.update
 
-
-#RABBIT EXCHANGE
-
-EXCHANGE_ORDER_CREATE = EXCHANGE_ORDER_CREATE.order.create
-EXCHANGE_ORDER_UPDATE = EXCHANGE_ORDER_UPDATE.order.update
-EXCHANGE_ORDER_DELETE = EXCHANGE_ORDER_DELETE.order.delete
+QUEUE_MAIL_USER_CREATE = QUEUE_MAIL_USER_CREATE.user.create
