--- a/services/mail-srv/.env.production
+++ b/services/mail-srv/.env.production
@@ -24,16 +24,9 @@ IDENTITY_API_SRV = http://identity_srv:8080/api/v1
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 
-# QUEUES
+#RABBIT QUEUE
 
-QUEUE_ORDER_CREATE = QUEUE_MAIL_SRV.order.create
-QUEUE_ORDER_UPDATE = QUEUE_MAIL_SRV.order.update
-QUEUE_ORDER_DELETE = QUEUE_MAIL_SRV.order.delete
+QUEUE_MAIL_ORDER_CREATE = QUEUE_MAIL_ORDER_CREATE.order.create
+QUEUE_MAIL_ORDER_UPDATE = QUEUE_MAIL_ORDER_UPDATE.order.update
 
-
-#RABBIT EXCHANGE
-
-EXCHANGE_ORDER_CREATE = EXCHANGE_ORDER_CREATE.order.create
-EXCHANGE_ORDER_UPDATE = EXCHANGE_ORDER_UPDATE.order.update
-EXCHANGE_ORDER_DELETE = EXCHANGE_ORDER_DELETE.order.delete
-
+QUEUE_MAIL_USER_CREATE = QUEUE_MAIL_USER_CREATE.user.create
