--- a/services/order-srv/.env.development
+++ b/services/order-srv/.env.development
@@ -17,6 +17,12 @@ DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-order_s
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 
+#RABBIT QUEUE
+
+QUEUE_MAIL_ORDER_CREATE = QUEUE_MAIL_ORDER_CREATE.order.create
+QUEUE_MAIL_ORDER_UPDATE = QUEUE_MAIL_ORDER_UPDATE.order.update
+
+
 #RABBIT EXCHANGE
 
 EXCHANGE_ORDER_CREATE = EXCHANGE_ORDER_CREATE.order.create
