--- a/services/order-srv/.env.production
+++ b/services/order-srv/.env.production
@@ -17,6 +17,12 @@ DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/order_srv
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 
+#RABBIT QUEUE
+
+QUEUE_MAIL_ORDER_CREATE = QUEUE_MAIL_ORDER_CREATE.order.create
+QUEUE_MAIL_ORDER_UPDATE = QUEUE_MAIL_ORDER_UPDATE.order.update
+
+
 #RABBIT EXCHANGE
 
 EXCHANGE_ORDER_CREATE = EXCHANGE_ORDER_CREATE.order.create
