--- a/Dockerfile.mail-srv
+++ b/Dockerfile.mail-srv
@@ -1,6 +1,6 @@
 
 # BUILD APP
-FROM node:15-alpine
+FROM node:16.10-alpine:3.11
 
 RUN npm install -g npm@latest
 RUN npm config set package-lock false
