--- a/services/identity-srv/package.json
+++ b/services/identity-srv/package.json
@@ -16,22 +16,22 @@
     "@sys.packages/jwt": "1.0.0",
     "@sys.packages/logger": "1.0.0",
     "@sys.packages/rabbit": "1.0.0",
+    "@sys.packages/request": "1.0.0",
     "@sys.packages/server": "1.0.0",
     "@sys.packages/utils": "1.0.0",
-    "@sys.packages/request": "1.0.0",
     "dotenv": "10.0.0",
     "koa": "2.13.1",
     "koa-bodyparser": "4.3.0",
     "koa-logger": "3.2.1",
-    "koa-router": "10.0.0",
+    "koa-router": "10.1.1",
+    "node-sagas": "0.0.6",
     "pg": "8.7.1",
     "pg-hstore": "2.3.4",
-    "sequelize": "6.6.5",
-    "node-sagas": "0.0.6"
+    "sequelize": "6.6.5"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
-    "nodemon": "2.0.12",
+    "nodemon": "2.0.13",
     "sequelize-cli": "6.2.0"
   }
 }
