--- a/services/product-srv/package.json
+++ b/services/product-srv/package.json
@@ -19,14 +19,14 @@
     "@sys.packages/request": "1.0.0",
     "@sys.packages/server": "1.0.0",
     "@sys.packages/utils": "1.0.0",
+    "ajv": "8.6.2",
     "busboy": "0.3.1",
     "dotenv": "10.0.0",
-    "node-sagas": "0.0.6",
-    "ajv": "8.6.2"
+    "node-sagas": "0.0.6"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
-    "nodemon": "2.0.12",
+    "nodemon": "2.0.13",
     "sequelize-cli": "6.2.0"
   }
 }
