fixed rabbit exchanges name

--- a/clients/order-ui/.env.production
+++ b/clients/order-ui/.env.production
@@ -12,9 +12,8 @@ REACT_APP_WEBSITE_NAME = "Осетинские пироги"
 
 # SOCKET
 
-REACT_APP_SOCKET_ORDER_CREATE = ADMIN_ORDER_CREATE
-REACT_APP_SOCKET_ORDER_UPDATE = ADMIN_ORDER_UPDATE
-REACT_APP_SOCKET_ORDER_DELETE = ADMIN_ORDER_DELETE
+REACT_APP_SOCKET_ORDER_CREATE = ORDER_ORDER_CREATE
+REACT_APP_SOCKET_ORDER_UPDATE = ORDER_ORDER_UPDATE
 
-REACT_APP_SOCKET_IMAGE_DELETE = ADMIN_IMAGE_DELETE
-REACT_APP_SOCKET_IMAGE_UPDATE = ADMIN_IMAGE_UPDATE
+REACT_APP_SOCKET_IMAGE_DELETE = ORDER_IMAGE_DELETE
+REACT_APP_SOCKET_IMAGE_UPDATE = ORDER_IMAGE_UPDATE
