--- a/services/gallery-srv/.env.development
+++ b/services/gallery-srv/.env.development
@@ -16,9 +16,9 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 # EVENT
 
-EVENT_IMAGE_DELETE = EVENT_GALLERY_SRV.image.delete
+EVENT_IMAGE_DELETE = GALLERY_SRV.image.delete
 
 
 # EXCHANGE
 
-EXCHANGE_IMAGE_UPDATE = EXCHANGE_GALLERY_SRV.image.update
+EXCHANGE_IMAGE_UPDATE = GALLERY_SRV.image.update
