--- a/services/identity-srv/.env.development
+++ b/services/identity-srv/.env.development
@@ -30,11 +30,11 @@ JWT_SECRET = osetpr.secret.key
 
 #RABBIT QUEUE
 
-QUEUE_MAIL_USER_CREATE = QUEUE_MAIL_USER_CREATE.user.create
+QUEUE_MAIL_USER_CREATE = MAIL_SRV.user.create
 
 
 # EXCHANGE
 
-EXCHANGE_USER_CREATE = EXCHANGE_USER_CREATE.user.create
-EXCHANGE_USER_UPDATE = EXCHANGE_USER_UPDATE.user.update
-EXCHANGE_USER_DELETE = EXCHANGE_USER_DELETE.user.delete
+EXCHANGE_USER_CREATE = IDENTITY_SRV.user.create
+EXCHANGE_USER_UPDATE = IDENTITY_SRV.user.update
+EXCHANGE_USER_DELETE = IDENTITY_SRV.user.delete
