--- a/gateway/admin-gw/.env.development
+++ b/gateway/admin-gw/.env.development
@@ -34,29 +34,26 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 # QUEUES
 
-QUEUE_ORDER_CREATE = QUEUE_ADMIN_GW.order.create
-QUEUE_ORDER_UPDATE = QUEUE_ADMIN_GW.order.update
-QUEUE_ORDER_DELETE = QUEUE_ADMIN_GW.order.delete
+QUEUE_ORDER_CREATE = ADMIN_GW.order.create
+QUEUE_ORDER_UPDATE = ADMIN_GW.order.update
 
-QUEUE_IMAGE_DELETE = QUEUE_ADMIN_GW.image.delete
-QUEUE_IMAGE_UPDATE = QUEUE_ADMIN_GW.image.update
+QUEUE_IMAGE_DELETE = ADMIN_GW.image.delete
+QUEUE_IMAGE_UPDATE = _ADMIN_GW.image.update
 
 
 #RABBIT EXCHANGE
 
-EXCHANGE_ORDER_CREATE = EXCHANGE_ORDER_CREATE.order.create
-EXCHANGE_ORDER_UPDATE = EXCHANGE_ORDER_UPDATE.order.update
-EXCHANGE_ORDER_DELETE = EXCHANGE_ORDER_DELETE.order.delete
+EXCHANGE_ORDER_CREATE = ORDER_SRV.order.create
+EXCHANGE_ORDER_UPDATE = ORDER_SRV.order.update
 
-EXCHANGE_IMAGE_DELETE = EXCHANGE_GALLERY_SRV.image.delete
-EXCHANGE_IMAGE_UPDATE = EXCHANGE_GALLERY_SRV.image.update
+EXCHANGE_IMAGE_DELETE = GALLERY_SRV.image.delete
+EXCHANGE_IMAGE_UPDATE = GALLERY_SRV.image.update
 
 
 # SOCKET
 
 SOCKET_ORDER_CREATE = ADMIN_ORDER_CREATE
 SOCKET_ORDER_UPDATE = ADMIN_ORDER_UPDATE
-SOCKET_ORDER_DELETE = ADMIN_ORDER_DELETE
 
 SOCKET_IMAGE_DELETE = ADMIN_IMAGE_DELETE
 SOCKET_IMAGE_UPDATE = ADMIN_IMAGE_UPDATE
