--- a/modules/order/order-orders/package.json
+++ b/modules/order/order-orders/package.json
@@ -19,6 +19,8 @@
     "@ui.packages/table": "1.0.0",
     "@ui.packages/theme": "1.0.0",
     "@ui.packages/types": "1.0.0",
+    "@packages/moment": "1.0.0",
+    "@packages/numeral": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
