--- a/services/customer-srv/.env.development
+++ b/services/customer-srv/.env.development
@@ -14,4 +14,4 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 #RABBIT EXCHANGE
 
-EXCHANGE_CUSTOMER_UPDATE = EXCHANGE_CUSTOMER_SRV.customer.update
+EXCHANGE_CUSTOMER_UPDATE = CUSTOMER_SRV.customer.update
