--- a/services/mail-srv/.env.production
+++ b/services/mail-srv/.env.production
@@ -26,7 +26,7 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 #RABBIT QUEUE
 
-QUEUE_MAIL_ORDER_CREATE = QUEUE_MAIL_ORDER_CREATE.order.create
-QUEUE_MAIL_ORDER_UPDATE = QUEUE_MAIL_ORDER_UPDATE.order.update
+QUEUE_MAIL_ORDER_CREATE = MAIL_SRV.order.create
+QUEUE_MAIL_ORDER_UPDATE = MAIL_SRV.order.update
 
-QUEUE_MAIL_USER_CREATE = QUEUE_MAIL_USER_CREATE.user.create
+QUEUE_MAIL_USER_CREATE = MAIL_SRV.user.create
