--- a/services/order-srv/.env.production
+++ b/services/order-srv/.env.production
@@ -19,12 +19,12 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 #RABBIT QUEUE
 
-QUEUE_MAIL_ORDER_CREATE = QUEUE_MAIL_ORDER_CREATE.order.create
-QUEUE_MAIL_ORDER_UPDATE = QUEUE_MAIL_ORDER_UPDATE.order.update
+QUEUE_MAIL_ORDER_CREATE = MAIL_SRV.order.create
+QUEUE_MAIL_ORDER_UPDATE = MAIL_SRV.order.update
 
 
 #RABBIT EXCHANGE
 
-EXCHANGE_ORDER_CREATE = EXCHANGE_ORDER_CREATE.order.create
-EXCHANGE_ORDER_UPDATE = EXCHANGE_ORDER_UPDATE.order.update
-EXCHANGE_ORDER_DELETE = EXCHANGE_ORDER_DELETE.order.delete
+EXCHANGE_ORDER_CREATE = ORDER_SRV.order.create
+EXCHANGE_ORDER_UPDATE = ORDER_SRV.order.update
+EXCHANGE_ORDER_DELETE = ORDER_SRV.order.delete
