--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -208,6 +208,7 @@ services:
       - customer_srv
       - gallery_srv
       - product_srv
+      - plan_srv
     links:
       - rabbit
       - order_srv
@@ -215,6 +216,7 @@ services:
       - customer_srv
       - gallery_srv
       - product_srv
+      - plan_srv
 
 
   client_gw:
