--- a/gateway/order-gw/.env.development
+++ b/gateway/order-gw/.env.development
@@ -25,7 +25,7 @@ CUSTOMER_API_SRV = http://localhost:5060/api/v1
 ORDER_API_SRV = http://localhost:5000/api/v1
 PRODUCT_API_SRV = http://localhost:5010/api/v1
 GALLERY_API_SRV = http://localhost:5030/api/v1
-
+PLAN_API_SRV = http://localhost:5080/api/v1
 
 
 # RABBIT CONNECTION
