--- a/services/product-srv/.env.development
+++ b/services/product-srv/.env.development
@@ -7,6 +7,7 @@ PORT = 5010
 # SERVICES
 
 GALLERY_API_SRV = http://localhost:5030/api/v1
+PLAN_API_SRV = http://localhost:5080/api/v1
 
 
 # DATABASE CONNECTION
