--- a/services/product-srv/.env.production
+++ b/services/product-srv/.env.production
@@ -7,6 +7,7 @@ PORT = 8080
 # SERVICES
 
 GALLERY_API_SRV = http://gallery_srv:8080/api/v1
+PLAN_API_SRV = http://plan_srv:8080/api/v1
 
 
 # DATABASE CONNECTION
