--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -7,6 +7,7 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@modules/admin-customer": "1.0.0",
     "@modules/admin-customers": "1.0.0",
     "@modules/admin-gallery": "1.0.0",
     "@modules/admin-main": "1.0.0",
@@ -25,12 +26,12 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.6",
+    "react-router-dom": "5.3.0",
     "redux": "4.1.1"
   },
   "devDependencies": {
     "react-scripts": "4.0.3",
-    "sass": "1.42.1"
+    "sass": "1.43.3"
   },
   "browserslist": [
     ">0.2%",
