--- a/clients/client-ui/package.json
+++ b/clients/client-ui/package.json
@@ -13,16 +13,17 @@
     "@ui.packages/application": "1.0.0",
     "@ui.packages/dialog": "1.0.0",
     "@ui.packages/notifications": "1.0.0",
+    "@ui.packages/theme-2": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.6",
+    "react-router-dom": "5.3.0",
     "redux": "4.1.1"
   },
   "devDependencies": {
     "react-scripts": "4.0.3",
-    "sass": "1.42.1"
+    "sass": "1.43.3"
   },
   "browserslist": [
     ">0.2%",
