--- a/clients/order-ui/package.json
+++ b/clients/order-ui/package.json
@@ -21,12 +21,12 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.6",
+    "react-router-dom": "5.3.0",
     "redux": "4.1.1"
   },
   "devDependencies": {
     "react-scripts": "4.0.3",
-    "sass": "1.42.1"
+    "sass": "1.43.3"
   },
   "browserslist": [
     ">0.2%",
