--- a/modules/client/client-main/package.json
+++ b/modules/client/client-main/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "private": false,
   "name": "@modules/client-main",
   "version": "1.0.0",
   "main": "lib/index.js",
@@ -23,7 +23,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.6",
+    "react-router-dom": "5.3.0",
     "redux": "4.1.1",
     "redux-form": "8.3.7"
   },
