--- a/ui.packages/admin-kit/package.json
+++ b/ui.packages/admin-kit/package.json
@@ -23,7 +23,7 @@
     "react-dadata": "2.12.0",
     "react-dom": "17.0.2",
     "react-input-mask": "2.0.4",
-    "react-router-dom": "6.0.0-beta.6",
+    "react-router-dom": "5.3.0",
     "react-sortable-hoc": "2.0.0"
   },
   "devDependencies": {
