--- a/ui.packages/application/package.json
+++ b/ui.packages/application/package.json
@@ -13,11 +13,11 @@
     "@ui.packages/notifications": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/socket": "1.0.0",
-    "history": "5.0.0",
+    "history": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.6",
+    "react-router-dom": "5.3.0",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
