--- a/ui.packages/cart/package.json
+++ b/ui.packages/cart/package.json
@@ -20,7 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.6"
+    "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
