--- a/ui.packages/editor/package.json
+++ b/ui.packages/editor/package.json
@@ -15,7 +15,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-draft-wysiwyg": "1.14.7",
-    "react-router-dom": "6.0.0-beta.6"
+    "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
