--- a/ui.packages/hoc/package.json
+++ b/ui.packages/hoc/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-router-dom": "6.0.0-beta.6"
+    "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
