--- a/ui.packages/request/package.json
+++ b/ui.packages/request/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "main": "./src/index.js",
   "dependencies": {
-    "axios": "0.22.0",
+    "axios": "0.23.0",
     "qs": "6.10.1",
     "react-router": "6.0.0-beta.6",
-    "react-router-dom": "6.0.0-beta.6"
+    "react-router-dom": "5.3.0"
   }
 }
