--- a/ui.packages/search/package.json
+++ b/ui.packages/search/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@ui.packages/admin-kit": "1.0.0",
     "react": "17.0.2",
-    "react-router-dom": "6.0.0-beta.6"
+    "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
