--- a/packages/numeral/package.json
+++ b/packages/numeral/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@packages/numeral",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./src/index.mjs",
   "dependencies": {
     "numeral": "2.0.6"
