--- a/ui.packages/socket/package.json
+++ b/ui.packages/socket/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/socket",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./src/index.js",
   "dependencies": {
     "socket.io-client": "4.3.2"
