--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -1,5 +1,6 @@
 {
-  "private": true,
+  "private": false,
+  "license": "MIT",
   "name": "admin-ui",
   "version": "0.1.0",
   "scripts": {
@@ -26,7 +27,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "6.0.0-beta.0",
     "redux": "4.1.1"
   },
   "devDependencies": {
