--- a/clients/client-ui/package.json
+++ b/clients/client-ui/package.json
@@ -1,6 +1,7 @@
 {
-  "private": true,
+  "private": false,
   "name": "client-ui",
+  "license": "MIT",
   "version": "0.1.0",
   "scripts": {
     "build": "cross-env NODE_ENV=production react-scripts build",
@@ -18,7 +19,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "6.0.0-beta.0",
     "redux": "4.1.1"
   },
   "devDependencies": {
