--- a/modules/order/order-main/package.json
+++ b/modules/order/order-main/package.json
@@ -2,6 +2,7 @@
   "private": false,
   "name": "@modules/order-main",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel src --out-dir ./lib --copy-files",
@@ -23,7 +24,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "6.0.0-beta.0",
     "redux": "4.1.1",
     "redux-form": "8.3.7"
   },
