--- a/packages/validate/package.json
+++ b/packages/validate/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@packages/validate",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./src/index.mjs",
   "dependencies": {
     "lodash": "4.17.21",
