--- a/sys.packages/logger/package.json
+++ b/sys.packages/logger/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@sys.packages/logger",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./src/index.mjs",
   "type": "module",
   "author": {
