--- a/sys.packages/utils/package.json
+++ b/sys.packages/utils/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@sys.packages/utils",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./src/index.mjs",
   "dependencies": {
     "busboy": "0.3.1"
