--- a/ui.packages/admin-kit/package.json
+++ b/ui.packages/admin-kit/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/admin-kit",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
@@ -23,7 +24,7 @@
     "react-dadata": "2.12.0",
     "react-dom": "17.0.2",
     "react-input-mask": "2.0.4",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "6.0.0-beta.0",
     "react-sortable-hoc": "2.0.0"
   },
   "devDependencies": {
