--- a/ui.packages/application/package.json
+++ b/ui.packages/application/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/application",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
@@ -17,7 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "6.0.0-beta.0",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
