--- a/ui.packages/dialog/package.json
+++ b/ui.packages/dialog/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/dialog",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
