--- a/ui.packages/editor/package.json
+++ b/ui.packages/editor/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/editor",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
@@ -15,7 +16,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-draft-wysiwyg": "1.14.7",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "6.0.0-beta.0"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
