--- a/ui.packages/hoc/package.json
+++ b/ui.packages/hoc/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/hoc",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
@@ -9,7 +10,7 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "6.0.0-beta.0"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
