--- a/ui.packages/request/package.json
+++ b/ui.packages/request/package.json
@@ -1,12 +1,13 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/request",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./src/index.js",
   "dependencies": {
     "axios": "0.23.0",
     "qs": "6.10.1",
     "react-router": "6.0.0-beta.6",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "6.0.0-beta.0"
   }
 }
