--- a/ui.packages/timer/package.json
+++ b/ui.packages/timer/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "name": "@ui.packages/timer",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./src/index.js",
   "dependencies": {}
 }
