--- a/modules/client/client-main/package.json
+++ b/modules/client/client-main/package.json
@@ -18,7 +18,7 @@
     "@ui.packages/request": "1.0.0",
     "@ui.packages/socket": "1.0.0",
     "@ui.packages/table": "1.0.0",
-    "@ui.packages/theme": "1.0.0",
+    "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/types": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
