--- a/clients/mobile-ui/package.json
+++ b/clients/mobile-ui/package.json
@@ -14,6 +14,7 @@
     "@ui.packages/mobile-kit": "1.0.0",
     "@ui.packages/application": "1.0.0",
     "@ui.packages/notifications": "1.0.0",
+    "@ui.packages/theme": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
