--- a/nginx/conf.d/client.conf
+++ b/nginx/conf.d/client.conf
@@ -7,6 +7,11 @@ upstream mobile {
     server mobile_ui;
 }
 
+map $http_user_agent $webroot {
+    "~*(windows\smobile|windows\sce|iphone|ipod|midp|symbian|series\s60|s60|nokia|аndroid|blackberry)"  mobile;
+    default  client;
+}
+
 server {
     listen 80;
     server_name osetpr.ru www.osetpr.ru;
@@ -35,38 +40,19 @@ server {
     if ($host ~ '^www\.') { set $https_redirect 1; }
     if ($https_redirect = 1) { return 301 https://osetpr.ru$request_uri; }
 
-    if ( $http_user_agent ~* (windows\smobile|windows\sce|iphone|ipod|midp|symbian|series\s60|s60|nokia|аndroid|blackberry)) {
-        location / {
+    location / {
 
-            proxy_pass                         http://mobile;
-            proxy_http_version                 1.1;
-            proxy_cache_bypass                 $http_upgrade;
+        proxy_pass                         http://$webroot;
+        proxy_http_version                 1.1;
+        proxy_cache_bypass                 $http_upgrade;
 
-            proxy_set_header Upgrade           $http_upgrade;
-            proxy_set_header Connection        "upgrade";
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host  $host;
-            proxy_set_header X-Forwarded-Port  $server_port;
-        }
-    }
-    else {
-        location / {
-
-            proxy_pass                         http://client;
-            proxy_http_version                 1.1;
-            proxy_cache_bypass                 $http_upgrade;
-
-            proxy_set_header Upgrade           $http_upgrade;
-            proxy_set_header Connection        "upgrade";
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host  $host;
-            proxy_set_header X-Forwarded-Port  $server_port;
-        }
+        proxy_set_header Upgrade           $http_upgrade;
+        proxy_set_header Connection        "upgrade";
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host  $host;
+        proxy_set_header X-Forwarded-Port  $server_port;
     }
 }
