--- a/nginx/conf.d/client.conf
+++ b/nginx/conf.d/client.conf
@@ -8,7 +8,7 @@ upstream mobile {
 }
 
 map $http_user_agent $webroot {
-    ~*(iPhone|iPod|Opera Mini|Android.*Mobile|NetFront|PSP|BlackBerry|Windows Phone)  mobile;
+    ~*(iPhone|iPod|Opera Mini|Android.*Mobile|NetFront|PSP|BlackBerry|Windows Phone|Android)  mobile;
     default  client;
 }
 
