--- a/nginx/conf.d/client.conf
+++ b/nginx/conf.d/client.conf
@@ -8,7 +8,7 @@ upstream mobile {
 }
 
 map $http_user_agent $webroot {
-    ~*(iPhone|iPod|Opera Mini|Android.*Mobile|NetFront|PSP|BlackBerry|Windows Phone|Android)  mobile;
+    ~*(iPhone|iPod|incognito|webmate|Android|dream|CUPCAKE|froyo|BlackBerry|webOS|s8000|bada|IEMobile|Googlebot\-Mobile|AdsBot\-Google)  mobile;
     default  client;
 }
 
