--- a/modules/mobile/main/package.json
+++ b/modules/mobile/main/package.json
@@ -18,6 +18,7 @@
     "@ui.packages/socket": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/types": "1.0.0",
+    "@ui.packages/order": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
