--- a/ui.packages/mobile-kit/package.json
+++ b/ui.packages/mobile-kit/package.json
@@ -12,10 +12,12 @@
     "@packages/numeral": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/request": "1.0.0",
+    "@ui.packages/order": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "7.2.5",
     "react-input-mask": "2.0.4",
     "react-router-dom": "6.0.0-beta.0"
   },
