--- a/modules/mobile/order/package.json
+++ b/modules/mobile/order/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@packages/errors": "1.0.0",
+    "@packages/numeral": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/request": "1.0.0",
@@ -17,6 +18,8 @@
     "@ui.packages/table": "1.0.0",
     "@ui.packages/theme": "1.0.0",
     "@ui.packages/types": "1.0.0",
+    "@ui.packages/order": "1.0.0",
+    "@ui.packages/mobile-kit": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
