--- a/modules/mobile/comments/package.json
+++ b/modules/mobile/comments/package.json
@@ -1,21 +1,24 @@
 {
   "private": true,
-  "name": "@ui.packages/menu",
+  "name": "@modules/mobile-comments",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
-    "start:dev": "cross-env NODE_ENV=development babel ./src --out-dir ./lib --copy-files --watch"
+    "build": "cross-env NODE_ENV=production babel src --out-dir ./lib --copy-files",
+    "start:dev": "cross-env NODE_ENV=development babel src --out-dir ./lib --copy-files --watch"
   },
   "dependencies": {
+    "@ui.packages/hoc": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
     "classnames": "2.3.1",
+    "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.0.0-beta.0"
+    "react-router-dom": "6.0.0-beta.0",
+    "redux": "4.1.1",
+    "redux-form": "8.3.7"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
