--- a/modules/mobile/order/package.json
+++ b/modules/mobile/order/package.json
@@ -20,6 +20,7 @@
     "@ui.packages/types": "1.0.0",
     "@ui.packages/order": "1.0.0",
     "@ui.packages/mobile-kit": "1.0.0",
+    "@ui.packages/mobile-dialog": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
