--- a/ui.packages/mobile-dialog/package.json
+++ b/ui.packages/mobile-dialog/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@ui.packages/mobile-kit",
+  "name": "@ui.packages/mobile-dialog",
   "version": "1.0.0",
   "license": "MIT",
   "main": "./lib/index.js",
@@ -9,18 +9,16 @@
     "start:dev": "cross-env NODE_ENV=development babel ./src --out-dir ./lib --copy-files --watch"
   },
   "dependencies": {
-    "@packages/numeral": "1.0.0",
+    "@reduxjs/toolkit": "1.5.0",
+    "@ui.packages/admin-kit": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
-    "@ui.packages/request": "1.0.0",
-    "@ui.packages/order": "1.0.0",
+    "@ui.packages/types": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
-    "redux-form": "8.3.7",
-    "react-input-mask": "2.0.4",
-    "react-router-dom": "6.0.0-beta.0"
+    "redux": "4.1.1"
   },
   "devDependencies": {
     "@babel/cli": "7.15.7",
