--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -5,7 +5,7 @@ upstream admin {
 
 server {
     listen 80;
-    server_name ${ADMIN_HOST};
+    server_name ${NG_ADMIN_HOST};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -21,14 +21,14 @@ server {
 
     server_name stage.admin.osetpr.ru;
 
-    ssl_certificate /etc/letsencrypt/live/${ADMIN_HOST}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${ADMIN_HOST}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${NG_ADMIN_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${NG_ADMIN_HOST}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://${ADMIN_HOST}$request_uri; }
+    if ($https_redirect = 1) { return 301 https://${NG_ADMIN_HOST}$request_uri; }
 
     location / {
 
