--- a/nginx/conf.d/order.conf
+++ b/nginx/conf.d/order.conf
@@ -5,7 +5,7 @@ upstream order {
 
 server {
     listen 80;
-    server_name ${ORDER_HOST};
+    server_name ${NG_ORDER_HOST};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -19,16 +19,16 @@ server {
 server {
     listen 443 ssl;
 
-    server_name ${ORDER_HOST};
+    server_name ${NG_ORDER_HOST};
 
-    ssl_certificate /etc/letsencrypt/live/${ORDER_HOST}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${ORDER_HOST}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${NG_ORDER_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${NG_ORDER_HOST}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://${ORDER_HOST}$request_uri; }
+    if ($https_redirect = 1) { return 301 https://${NG_ORDER_HOST}$request_uri; }
 
     location / {
 
