--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -5,7 +5,7 @@ upstream admin {
 
 server {
     listen 80;
-    server_name ${dc_admin_host};
+    server_name $ENV{"NG_ADMIN_HOST"};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -21,14 +21,14 @@ server {
 
     server_name stage.admin.osetpr.ru;
 
-    ssl_certificate /etc/letsencrypt/live/${dc_admin_host}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${dc_admin_host}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/$ENV{"NG_ADMIN_HOST"}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$ENV{"NG_ADMIN_HOST"}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://${dc_admin_host}$request_uri; }
+    if ($https_redirect = 1) { return 301 https://$ENV{"NG_ADMIN_HOST"}$request_uri; }
 
     location / {
 
