--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -368,9 +368,9 @@ services:
       - 80:80
       - 443:443
     environment:
-      - CLIENT_HOST=osetpr.ru
-      - ADMIN_HOST=admin.osetpr.ru
-      - ORDER_HOST=order.osetpr.ru
+      CLIENT_HOST: osetpr.ru
+      ADMIN_HOST: admin.osetpr.ru
+      ORDER_HOST: order.osetpr.ru
     volumes:
       - ./nginx/init-letsencrypt.sh:/etc/nginx/init-letsencrypt.sh
       - ./nginx/conf.d:/etc/nginx/conf.d
