--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -5,7 +5,7 @@ upstream admin {
 
 server {
     listen 80;
-    server_name stage.admin.osetpr.ru;
+    server_name ${ADMIN_HOST};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -19,10 +19,10 @@ server {
 server {
     listen 443 ssl;
 
-    server_name stage.admin.osetpr.ru;
+    server_name ${ADMIN_HOST};
 
-    ssl_certificate /etc/letsencrypt/live/stage.admin.osetpr.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/stage.admin.osetpr.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${ADMIN_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${ADMIN_HOST}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
