--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -1,11 +1,14 @@
 
+set_by_lua $admin_host 'return os.getenv("ADMIN_HOST")';
+
+
 upstream admin {
     server admin_ui;
 }
 
 server {
     listen 80;
-    server_name $ENV{"ADMIN_HOST"};
+    server_name $admin_host;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -19,16 +22,16 @@ server {
 server {
     listen 443 ssl;
 
-    server_name $ENV{"ADMIN_HOST"};
+    server_name $admin_host;
 
-    ssl_certificate /etc/letsencrypt/live/$ENV{"ADMIN_HOST"}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/$ENV{"ADMIN_HOST"}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/$admin_host/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$admin_host/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://$ENV{"ADMIN_HOST"}$request_uri; }
+    if ($https_redirect = 1) { return 301 https://$admin_host$request_uri; }
 
     location / {
 
