--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,6 +37,8 @@ http {
 
   access_log  /var/log/nginx/access.log  main;
 
+  load_module /path/to/modules/ngx_http_lua_module.so;
+
   sendfile        on;
   #tcp_nopush     on;
 
