--- a/services/mail-srv/.env
+++ b/services/mail-srv/.env
@@ -10,7 +10,7 @@ DOMAIN = osetpr.ru
 
 EMAIL_HOST = smtp.timeweb.ru
 EMAIL_PORT = 465
-EMAIL_USER = orders@osetpr.ru
+EMAIL_USER = stage.robot@osetpr.ru
 EMAIL_PASSWORD = 1Ctdfcnjgjkm
 
 
