--- a/modules/mobile/main/package.json
+++ b/modules/mobile/main/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ui.packages/hoc": "1.0.0",
+    "@ui.packages/utils": "1.0.0",
     "@ui.packages/mobile-kit": "1.0.0",
+    "@ui.packages/mobile-dialog": "1.0.0",
     "@ui.packages/mobile-notifications": "1.0.0",
     "@ui.packages/order": "1.0.0",
     "@ui.packages/request": "1.0.0",
