--- a/clients/mobile-ui/.env.prod
+++ b/clients/mobile-ui/.env.prod
@@ -1,6 +1,8 @@
 
 PUBLIC_URL = /
 
+REACT_APP_PUSH_PUBLIC_KYE = BG1yYx5YrjmPkPgoEQCNMPJLs6zGlkG-skE6YPnsT7o10vVkCTelw6L5nDpkBmicWtnQCP8D7HF2dBjDfdg4wuY
+
 REACT_APP_SOCKET_HOST = https://osetpr.ru
 REACT_APP_SOCKET_PATH = /client.socket.io
 REACT_APP_API_HOST = https://osetpr.ru/api
