--- a/clients/mobile-ui/.env.stage
+++ b/clients/mobile-ui/.env.stage
@@ -1,6 +1,8 @@
 
 PUBLIC_URL = /
 
+REACT_APP_PUSH_PUBLIC_KYE = BDWed9JnXRcGHG9Ni3-zBjuAKvkTpb5JutuC80-8-g41UMp8HIkKqT2UQczndSQBj97TS2R_qnMWzhAnl6xcyHE
+
 REACT_APP_SOCKET_HOST = https://stage.osetpr.ru
 REACT_APP_SOCKET_PATH = /client.socket.io
 REACT_APP_API_HOST = https://stage.osetpr.ru/api
