--- a/compose.stage.yml
+++ b/compose.stage.yml
@@ -54,6 +54,19 @@ services:
         max-size: 10m
 
 
+  push_srv:
+    container_name: push_srv
+    build:
+      context: ./
+      dockerfile: ./_deploy/stage/Dockerfile.push-srv
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: 10m
+
+
   customer_srv:
     container_name: customer_srv
     build:
