--- a/gateway/client-gw/.env
+++ b/gateway/client-gw/.env
@@ -25,6 +25,7 @@ CUSTOMER_API_SRV = http://localhost:5060/api/v1
 GALLERY_API_SRV = http://localhost:5030/api/v1
 ORDER_API_SRV = http://localhost:5000/api/v1
 PRODUCT_API_SRV = http://localhost:5010/api/v1
+PUSH_API_SRV = http://localhost:5022/api/v1
 
 
 # RABBIT CONNECTION
