--- a/services/push-srv/.env
+++ b/services/push-srv/.env
@@ -15,6 +15,11 @@ PRIVATE_KEY = 9aFiKWkHaQqOwvGI8GerG6P0OsFoDrIfbofw1tEoMIY
 IDENTITY_API_SRV = http://localhost:5050/api/v1
 
 
+# DATABASE CONNECTION
+
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-product_srv
+
+
 # RABBIT CONNECTION
 
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
