--- a/services/product-srv/.env.prod
+++ b/services/product-srv/.env.prod
@@ -12,7 +12,7 @@ PLAN_API_SRV = http://plan_srv:8080/api/v1
 
 # DATABASE CONNECTION
 
-DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/product_srv
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/push_srv
 
 
 # RABBIT CONNECTION
