--- a/services/push-srv/.env.prod
+++ b/services/push-srv/.env.prod
@@ -15,6 +15,11 @@ PRIVATE_KEY = Tj2KoDwGZof4_d8cq5LsGTTZD0NaKQeiOv8dGr41zAQ
 IDENTITY_API_SRV = http://identity_srv:8080/api/v1
 
 
+# DATABASE CONNECTION
+
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/product_srv
+
+
 # RABBIT CONNECTION
 
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
