--- a/services/product-srv/.env
+++ b/services/product-srv/.env
@@ -12,7 +12,7 @@ PLAN_API_SRV = http://localhost:5080/api/v1
 
 # DATABASE CONNECTION
 
-DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-push_srv
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-product_srv
 
 
 # RABBIT CONNECTION
