--- a/services/push-srv/.env.stage
+++ b/services/push-srv/.env.stage
@@ -6,6 +6,7 @@ PORT = 8080
 
 # OPTIONS
 
+PUSH_HOST = https://stage.osetpr.ru
 PUBLIC_KEY = BDWed9JnXRcGHG9Ni3-zBjuAKvkTpb5JutuC80-8-g41UMp8HIkKqT2UQczndSQBj97TS2R_qnMWzhAnl6xcyHE
 PRIVATE_KEY = jpXnSj3bqOTcsxsfWu3kLDPhE5xKwqYLWfv4TzcvBvY
 
@@ -17,7 +18,7 @@ IDENTITY_API_SRV = http://identity_srv:8080/api/v1
 
 # DATABASE CONNECTION
 
-DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/product_srv
+DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/push_srv
 
 
 # RABBIT CONNECTION
