--- a/services/push-srv/db/config.json
+++ b/services/push-srv/db/config.json
@@ -3,7 +3,7 @@
   "development": {
     "port": 5432,
     "host": "localhost",
-    "database": "osetpr-product_srv",
+    "database": "osetpr-push_srv",
     "username": "admin",
     "password": "1Ctdfcnjgjkm",
     "dialect": "postgres"
@@ -11,7 +11,7 @@
   "production": {
     "port": 5432,
     "host": "db",
-    "database": "product_srv",
+    "database": "push_srv",
     "username": "admin",
     "password": "1Ctdfcnjgjkm",
     "dialect": "postgres"
