--- a/modules/mobile/options/package.json
+++ b/modules/mobile/options/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@modules/mobile-order-draft",
+  "name": "@modules/mobile-options",
   "version": "1.0.0",
   "license": "MIT",
   "main": "lib/index.js",
@@ -22,6 +22,7 @@
     "@ui.packages/table": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/types": "1.0.0",
+    "@ui.packages/web-push": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
