--- a/nginx/conf.stage.d/client.conf
+++ b/nginx/conf.stage.d/client.conf
@@ -40,7 +40,8 @@ server {
     if ($https_redirect = 1) { return 301 https://stage.osetpr.ru$request_uri; }
 
     location ~ push-notification.js {
-      add_header Content-Type application/x-javascript;
+      add_header                         Content-Type      application/x-javascript;
+      proxy_pass                         http://$webroot;
     }
 
     location / {
