--- a/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
+++ b/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
@@ -35,7 +35,7 @@ server {
         proxy_pass http://api-server;
     }
 
-    location /service-worker.js {
+    location ~ /service-worker.js$ {
 
         try_files $uri $uri/ /service-worker.js =404;
     }
