--- a/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
+++ b/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
@@ -37,7 +37,7 @@ server {
 
     location ~ /service-worker.js$ {
 
-        try_files $uri $uri/ /service-worker.js =404;
+        try_files $uri $uri/service-worker.js =404;
     }
 
     location / {
