--- a/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
+++ b/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
@@ -35,6 +35,11 @@ server {
         proxy_pass http://api-server;
     }
 
+    location = /service-worker.js {
+       add_header Content-Type text/plain;
+       try_files $uri $uri/ /service-worker.js =404;
+    }
+
     location / {
 
         try_files $uri $uri/ /index.html =404;
