--- a/gateway/client-gw/.env.prod
+++ b/gateway/client-gw/.env.prod
@@ -30,3 +30,18 @@ PUSH_API_SRV = http://push_srv:8080/api/v1
 # RABBIT CONNECTION
 
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
+
+
+# RABBIT QUEUES
+
+QUEUE_ORDER_UPDATE = CLIENT_GW.order.update
+
+
+#RABBIT EXCHANGE
+
+EXCHANGE_ORDER_UPDATE = ORDER_SRV.order.update
+
+
+# SOCKET
+
+SOCKET_ORDER_UPDATE = CLIENT_ORDER_UPDATE
