--- a/gateway/client-gw/.env
+++ b/gateway/client-gw/.env
@@ -31,3 +31,18 @@ PUSH_API_SRV = http://localhost:5022/api/v1
 # RABBIT CONNECTION
 
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
+
+
+# RABBIT QUEUES
+
+QUEUE_ORDER_UPDATE = CLIENT_GW.order.update
+
+
+#RABBIT EXCHANGE
+
+EXCHANGE_ORDER_UPDATE = ORDER_SRV.order.update
+
+
+# SOCKET
+
+SOCKET_ORDER_UPDATE = CLIENT_ORDER_UPDATE
