--- a/services/push-srv/.env.prod
+++ b/services/push-srv/.env.prod
@@ -28,4 +28,4 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 #RABBIT QUEUE
 
-QUEUE_PUSH_ORDER_UPDATE = PUSH_SRV.order.update
+QUEUE_PUSH_SEND = PUSH_SRV.push.send
