--- a/services/sms-srv/.env
+++ b/services/sms-srv/.env
@@ -7,7 +7,7 @@ PORT = 5021
 # OPTIONS
 
 SMS_USER = pyatakov.viktor@gmail.com
-SMS_API = gate.smsaero.ru/v2/sms
+SMS_HOST = gate.smsaero.ru
 SMS_KEY = K7RBIOeVy2sERquPLc2mOgYHdRZc
 SMS_SIGN = osetpr.ru
 
@@ -24,5 +24,4 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 #RABBIT QUEUE
 
-QUEUE_SMS_ORDER_CREATE = SMS_SRV.order.create
-QUEUE_SMS_ORDER_UPDATE = SMS_SRV.order.update
+QUEUE_SMS_SEND = SMS_SRV.sms.send
