--- a/services/order-srv/.env.prod
+++ b/services/order-srv/.env.prod
@@ -25,6 +25,7 @@ QUEUE_MAIL_ORDER_CREATE = MAIL_SRV.order.create
 QUEUE_MAIL_ORDER_UPDATE = MAIL_SRV.order.update
 
 QUEUE_PUSH_ORDER_UPDATE = PUSH_SRV.order.update
+QUEUE_PUSH_SEND = PUSH_SRV.push.send
 
 
 #RABBIT EXCHANGE
