--- a/services/product-srv/.env.prod
+++ b/services/product-srv/.env.prod
@@ -25,3 +25,5 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 EXCHANGE_PRODUCT_CREATE = PRODUCT_SRV.product.create
 EXCHANGE_PRODUCT_UPDATE = PRODUCT_SRV.product.update
 EXCHANGE_PRODUCT_DELETE = PRODUCT_SRV.product.delete
+
+EXCHANGE_IMAGE_DELETE = GALLERY_SRV.image.delete
