--- a/services/product-srv/.env
+++ b/services/product-srv/.env
@@ -20,8 +20,15 @@ DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-product
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 
+# QUEUES
+
+QUEUE_IMAGE_DELETE = PRODUCT_SRV.image.delete
+
+
 #RABBIT EXCHANGE
 
 EXCHANGE_PRODUCT_CREATE = PRODUCT_SRV.product.create
 EXCHANGE_PRODUCT_UPDATE = PRODUCT_SRV.product.update
 EXCHANGE_PRODUCT_DELETE = PRODUCT_SRV.product.delete
+
+EXCHANGE_IMAGE_DELETE = GALLERY_SRV.image.delete
